--- a/scripts/install
+++ b/scripts/install
@@ -41,10 +41,10 @@ yunohost service add $app --description="A short description of the app" --log="
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="some_config_file" --destination="$install_dir/some_config_file"
+ynh_add_config --template="../conf/config" --destination="$install_dir/config"
 
-chmod 400 "$install_dir/some_config_file"
-chown $app:$app "$install_dir/some_config_file"
+chmod 400 "$install_dir/config"
+chown $app:$app "$install_dir/config"
 
 #=================================================
 # GENERIC FINALIZATION
