--- a/scripts/install
+++ b/scripts/install
@@ -26,9 +26,20 @@ chown -R $app:www-data "$install_dir"
 #=================================================
 ynh_script_progression --message="Adding system configurations related to $app ..." --weight=1
 
+#=================================================
+# INSTALL FILEPIZZA
+#=================================================
+ynh_script_progression --message="Installing the app..." --weight=10
+
+pushd "$install_dir"
+ 	ynh_use_nodejs
+ 	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH $ynh_npm install
+popd
+
 # Create a dedicated NGINX config using the conf/nginx.conf template
 ynh_add_nginx_config
 
+env_path="$PATH"
 # Create a dedicated systemd config
 ynh_add_systemd_config
 
