--- a/scripts/install
+++ b/scripts/install
@@ -33,7 +33,7 @@ ynh_script_progression --message="Installing the app..." --weight=10
 
 pushd "$install_dir"
  	ynh_use_nodejs
- 	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH $ynh_npm install
+ 	$ynh_npm install
 popd
 
 # Create a dedicated NGINX config using the conf/nginx.conf template
