--- a/scripts/install
+++ b/scripts/install
@@ -10,6 +10,13 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
+# INSTALL DEPENDENCIES
+#=================================================
+ynh_script_progression --message="Installing dependencies..." --weight=12
+
+ynh_install_nodejs --nodejs_version=$nodejs_version
+
+#=================================================
 # APP "BUILD" (DEPLOYING SOURCES, VENV, COMPILING ETC)
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -22,19 +29,19 @@ ynh_setup_source --dest_dir="$install_dir"
 chown -R $app:www-data "$install_dir"
 
 #=================================================
-# SYSTEM CONFIGURATION
-#=================================================
-ynh_script_progression --message="Adding system configurations related to $app ..." --weight=1
-
-#=================================================
-# INSTALL FILEPIZZA
+# INSTALL FLOW
 #=================================================
 ynh_script_progression --message="Installing the app..." --weight=10
 
 pushd "$install_dir"
  	ynh_use_nodejs
- 	$ynh_npm install
+ 	ynh_exec_warn_less sudo -u $app env $ynh_node_load_PATH $ynh_npm install
 popd
+
+#=================================================
+# SYSTEM CONFIGURATION
+#=================================================
+ynh_script_progression --message="Adding system configurations related to $app..." --weight=1
 
 # Create a dedicated NGINX config using the conf/nginx.conf template
 ynh_add_nginx_config
